improved quality of pages.

--- a/src/TidyWindow.App/Views/LogsPage.xaml
+++ b/src/TidyWindow.App/Views/LogsPage.xaml
@@ -8,7 +8,13 @@
       xmlns:controls="clr-namespace:TidyWindow.App.Views"
       mc:Ignorable="d"
       Title="Logs"
-      Background="Transparent">
+      Background="Transparent"
+      UseLayoutRounding="True"
+      SnapsToDevicePixels="True"
+      TextOptions.TextFormattingMode="Display"
+      TextOptions.TextRenderingMode="ClearType"
+      TextOptions.TextHintingMode="Fixed"
+      RenderOptions.BitmapScalingMode="HighQuality">
 
     <Page.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
